# AoC2024

./: .editorconfig  .gitignore  CMakeLists.txt  Readme.md  flake.nix  justfile  test_all.py
1/: 1.cpp
10/: 10.cpp
11/: 11.cpp  112.cpp
12/: 12.cpp  common.h
13/: 13.cpp
14/: 14.cpp
15/: 15.cpp  152.cpp
2/: 2.cpp
3/: 3.cpp
4/: 4.cpp
5/: 5.cpp
6/: 6.cpp
7/: 7.cpp
8/: 8.cpp  82.cpp
9/: 9.cpp
common/: grid.h  position.h
